--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/online_marketplace
-    username: market_user
-    password: market_password
-    root_password: root
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://${DB_CONTAINER:localhost}:${DB_PORT:3306}/${DB_NAME:online_marketplace}?useSSL=false
+    username: ${DB_USERNAME:user1}
+    password: ${DB_USER_PASSWORD:pass}
+    root_password: ${DB_ROOT_PASSWORD:root_pass}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
-  database:
-    name: online_marketplace
+    show-sql: true
+  hibernate:
+    ddl-auto: create-drop
 
 logging:
   level:
