--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - DB_PORT=3306
       - DB_USERNAME=user1
       - DB_USER_PASSWORD=pass
-      - DB_ROOT_PASSWORD=root_pass
     networks:
       - market_net
     expose:
@@ -25,7 +24,7 @@ services:
   db:
     image: 'mysql:8.0.0'
     healthcheck:
-      test: ["CMD","mysqladmin","ping","-h","localhost"]
+      test: ["CMD","mysqladmin","ping","-h","localhost","-u","user1","-ppass"]
       timeout: 20s
       interval: 4s
       retries: 5
@@ -38,6 +37,8 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - market_net
+    ports:
+      - 3306:3306
     expose:
       - 3306
 
